agents/nndss-chat-ui/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nndss-chat-ui
  labels:
    app.kubernetes.io/name: nndss-chat-ui
spec:
  ports:
    - port: 8501
      protocol: TCP
      name: http
      targetPort: 8501
  selector:
    app.kubernetes.io/name: nndss-chat-ui
  type: ClusterIP
